pathways/images/static/css/imagesStyles.css
body{
    background-color: rgb(0, 0, 0);
    overflow: hidden;
    height: 100vh;
    display: flex;
    align-items: center;
    justify-content: center;
}

.page{
    /* contains img & navigation */
    width: 100vw;
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: center;
}

.arrows{
    /* contains arrows */
    display: flex ;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.left-right{
    /* contains left and right arrows */
    display: flex;
}

.button-container {
    /* contains buttons */
    display: flex;
    justify-content: center;
    transition: all 1s;
}

.button-container:hover{
    transform: scale(1.5);
}

.img{
    /* This element is the main img */
    padding-right: 20vw;
    display: block;
    opacity: 0;
    max-height: 80vh; 
    max-width: 60vw;
    z-index: 1;
}

.img-container{
    /* contains img */
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

p {
    /* this element is the caption from image.name */
    writing-mode: vertical-rl;
    text-align: center;
    display: fixed;
    right:0vw;
    color:#000000;
    background-color: #ffffff;
    font-size: x-large; 
    opacity: 0;
    z-index: 2;
}

.nav-container { 
     /* contains arrows and caption */
    position: fixed;
    right: 5vh;
    display: flex;
}

.arrowButton {
    /* this element is the arrow */
    padding: 2vh;
    background-color:  rgba(0, 0, 0, 0);
    color: rgb(255, 255, 255);
    border: none;
    opacity: 0;
    font-size: 4em;
}

.onRight {
    /* to be applied when img slides right */
    animation: onRight .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes onRight {
        0% {
            opacity: 1;
            transform: translateX(0%);
        }
        100% {
            opacity: -.5;
            transform: translateX(-100%);
        }
}

.onLeft {
    /* to be applied when img slides left */
    animation: onLeft .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes onLeft {
        0% {
            opacity: 1;
            transform: translateX(0%);
        }
        100% {
            opacity: -.5;
            transform: translateX(100%);
        }
}

.onUp {
    /* to be applied when img slides up */
    animation: onUp .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes onUp {
        0% {
            opacity: 1;
            transform: translateY(0%);
        }
        100% {
            opacity: -.5;
            transform: translateY(100%);
        }
}

.onDown {
    /* to be applied when img slides down */
    animation: onDown .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes onDown {
        0% {
            opacity: 1;
            transform: translateY(0%);
        }
        100% {
            opacity: -.5;
            transform: translateY(-100%);
        }
}

.fadeOut {
    /* to be applied when element fades out */
    animation: fadeOut .5s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes fadeOut {
        0% {
            opacity: 1;
        }
        100% {
            opacity: 0;
        }
}

.fadeIn {
    /* to be applied when element is faded in */
    animation: fadeIn .6s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes fadeIn {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
}

.slowFadeIn {
    /* to be applied when img is loaded */
    animation: fadeIn 1s cubic-bezier(0.645, 0.045, 0.355, 1) forwards;
}
    @keyframes fadeIn {
        0% {
            opacity: 0;
        }
        100% {
            opacity: 1;
        }
}


.focus {
    /* to be applied when img is focused */
    opacity: 1;
    animation: focus 1s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes focus {
        0% {
            transform: scale(1) ;
        }
        100% {
            transform: scale(1.2) ;
        }
}

.unFocus {
    /* to be applied when img is unfocused */
    opacity: 1;
    animation: unFocus 1s cubic-bezier(0.445, 0.05, 0.55, 0.95) forwards;
}
    @keyframes unFocus {
        0% {
            transform: scale(1.2) ;
        }
        100% {
            transform: scale(1) ;
        }
}

